--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -9,7 +9,7 @@
 		<meta name="theme-color" content="#000000" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
-		<link rel="shortcut icon" href="%PUBLIC_URL%/icon.svg" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/icon.animated.svg" />
 		<link rel="apple-touch-icon" sizes="1024x1024" href="icon.png" />
 		<title>Florian Wendelborn</title>
 	</head>
