chore(analytics): Add Plausible.io
It’s a much more privacy-respecting alternative to Google Analytics

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -12,6 +12,11 @@
 		<link rel="shortcut icon" href="%PUBLIC_URL%/icon.animated.svg" />
 		<link rel="apple-touch-icon" sizes="1024x1024" href="icon.png" />
 		<title>Florian Wendelborn</title>
+		<script
+			defer
+			data-domain="florianwendelborn.com"
+			src="https://plausible.io/js/plausible.js"
+		></script>
 	</head>
 	<body>
 		<div id="root"></div>
